--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,9 +52,9 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".SendLoc"></receiver>
+        <service android:name=".SendLoc" />
 
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".LoginActivity"/>
     </application>
 
 </manifest>
